--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -29,5 +30,4 @@
     "globals": "^15.14.0",
     "vite": "^6.1.0"
   }
-  
 }
